--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-express-project",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "vite": "^6.1.0"
   }
 }
