--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-intl": "^6.8.9",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-modal-video": "^1.2.10",
     "react-notifications-component": "^3.4.1",
     "react-qr-code": "^2.0.15",
