--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node server"
+    "start": "cross-env VITE_NODE_ENV=production node server"
   },
   "keywords": [],
   "author": "",
